Add title class to description element

--- a/src/build-a-survey-form.html
+++ b/src/build-a-survey-form.html
@@ -10,7 +10,8 @@
     <div>
     <body>
     <h1 id='title'>Survey Form</h1>
-    <p id='description'>Thank you for completing our survey</p>
+    <p id='description'
+    class='title'>Thank you for completing our survey</p>
     <div>
     <form id='survey-form' action='Submit'>
       <label for='name' id='name-label' >Enter Your Name:<input id='name' type="text" placeholder='Enter Your Name' required /></label>
