Update form labels and text alignment

--- a/src/build-a-survey-form.html
+++ b/src/build-a-survey-form.html
@@ -14,9 +14,9 @@
     class='title'>Thank you for completing our survey</p>
     <div>
     <form id='survey-form' action='Submit'>
-      <label for='name' id='name-label' >Enter Your Name:<input id='name' type="text" placeholder='Enter Your Name' required /></label>
-      <label for="email" id='email-label' >Enter Your Email:<input id="email" type="email" required placeholder='Enter Your Email' /></label>
-      <label for='number' id='number-label'>Enter Your Number: <input type='number' id='number' name='number' min="10" max="10" placeholder='Enter Your Number'  required></label>
+      <label for='name' id='name-label' class="q" >Enter Your Name:<input id='name' type="text" placeholder='Enter Your Name' required /></label>
+      <label for="email" id='email-label' class="q" >Enter Your Email:<input id="email" type="email" required placeholder='Enter Your Email' /></label>
+      <label for='number' id='number-label' class="q">Enter Your Number: <input type='number' id='number' name='number' min="10" max="10" placeholder='Enter Your Number'  required></label>
       <div>
       <select id='dropdown'>
       <option value='marital-status'>Marital Status</option>
