Update form labels and styles

--- a/src/build-a-survey-form.html
+++ b/src/build-a-survey-form.html
@@ -1,4 +1,4 @@
-** start of undefined **
+aq
 
 <!DOCTYPE=html> 
   <html lang="en">
@@ -14,9 +14,12 @@
     class='title'>Thank you for completing our survey</p>
     <div>
     <form id='survey-form' action='Submit'>
-      <label for='name' id='name-label' class="q" >Enter Your Name:<input id='name' type="text" placeholder='Enter Your Name' required /></label>
-      <label for="email" id='email-label' class="q" >Enter Your Email:<input id="email" type="email" required placeholder='Enter Your Email' /></label>
-      <label for='number' id='number-label' class="q">Enter Your Number: <input type='number' id='number' name='number' min="10" max="10" placeholder='Enter Your Number'  required></label>
+      <label for='name' id='label' class="q" >Enter Your Name:<input id='name' type="text" placeholder='Enter Your Name' required /></label>
+      <br>
+      <label for="email" id='label' class="q" >Enter Your Email:<input id="email" type="email" required placeholder='Enter Your Email' /></label>
+      <br>
+      <label for='number' id='label' class="q">Enter Your Number: <input type='number' id='number' name='number' min="10" max="10" placeholder='Enter Your Number'  required></label>
+      <br>
       <div>
       <select id='dropdown'>
       <option value='marital-status'>Marital Status</option>
@@ -27,6 +30,7 @@
       <option value='divorced'>Divorced</option>
       </select>
       </div>
+      <br>
       <div>
       <label for='gender' type='dropdown'>Gender<select id='gender'  name='gender'placeholder='Select Age'>
       <option value="">Select Gender</option>
@@ -72,13 +76,4 @@
     </div>
     </body>
 
-** end of undefined **
-
-** start of undefined **
-
-body {
-  background-color:teal;
-}
-
-** end of undefined **
 
