--- a/src/tributePage/build-a-tribute-page.html
+++ b/src/tributePage/build-a-tribute-page.html
@@ -1,37 +1,47 @@
-** start of undefined **
-
-<link rel="stylesheet" href="styles.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bill Gates</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 <main id='main'>
-<title id='title'>Dr. Norman Borlaug</title>
+  <h1 id='title'>Bill Gates</h1>
+<p>The Greatest to ever create it</p>
 <figure id='img-div'>
-  <img id='image'>     
+  <img id='image' src="/img/billgates.jpg" alt="billgates">     
   <a id='tribute-link' target='_blank'href='_blank' value='link'></a>
 </img>
-<figcaption id='img-caption'>A Tribute to Dr.Norman Borlaug
+
+
+<figcaption id='img-caption'>
+  A Tribute to Bill Gates
   </figcaption>
 <a id='tribute-info'>tribute information</a>
 </figure>
+<section id="tribute-info">
+  <h3 ID="headline">Insert info here</h3>
 
 
+  <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
 
+  </ul>
 
-
-
+  <blockquote cite="">
+    <p></p>
+</blockquote>
+<cite></cite>
+<h3>Insert info here
+<a id="tribute-link" href="https://en.wikipedia.org/wiki/Bill_Gates" target="_blank">Wikipedia entry</a>
+</h3>
+</section>
 </main>
-
-** end of undefined **
-
-** start of undefined **
-
-#img-div {
-  max-width: 100%;
-  height: 50px;
-}
-img {
-  display: block;
-  max-width: 100%;
-  margin: auto;
-}
-
-** end of undefined **
-
+</body>
+</html>
