--- a/src/tributePage/build-a-tribute-page.html
+++ b/src/tributePage/build-a-tribute-page.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <main id='main'>
-  <h1 id='title'>Bill Gates</h1>
-<p>The Greatest to ever create it</p>
+  <h1 id='title' class="title">A Tribute To Bill Gates</h1>
+<p class="h1">The Greatest to ever create it</p>
 <figure id='img-div'>
   <img id='image' src="/img/billgates.jpg" alt="billgates">     
   <a id='tribute-link' target='_blank'href='_blank' value='link'></a>
