Update styles.css and build-a-tribute-page.html

--- a/src/tributePage/build-a-tribute-page.html
+++ b/src/tributePage/build-a-tribute-page.html
@@ -19,7 +19,7 @@
 <figcaption id='img-caption'>
   A Tribute to Bill Gates
   </figcaption>
-<a id='tribute-info'>tribute information</a>
+<a id='tribute-info'>Insert info here</a>
 </figure>
 <section id="tribute-info">
   <h3 ID="headline">Insert info here</h3>
