Update tribute page with Bill Gates' accomplishments and improve styling

--- a/src/build-a-tribute-page.html
+++ b/src/build-a-tribute-page.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <main id='main'>
-  <h1 id='title' class="title">A Tribute To Bill Gates</h1>
+  <h1 id='title' class="title">A Tribute To <br>Bill Gates</h1>
 <p class="h1">The Greatest to ever create it</p>
 <figure id='img-div'>
   <img class='img1' id='image' src="/img/billgates.jpg" alt="billgates">     
@@ -17,25 +17,28 @@
 
 
 <figcaption id='img-caption'>
-  A Tribute to Bill Gates
+  Co founder of Microsodt
   </figcaption>
-<a id='tribute-info'>Insert info here</a>
+<a id='tribute-info' class="p1">William Henry Gates III (born October 28, 1955) is an American businessman, investor, philanthropist, and writer best known for co-founding the software giant Microsoft, along with his childhood friend Paul Allen. During his career at Microsoft, Gates held the positions of chairman, chief executive officer (CEO), president, and chief software architect, while also being its largest individual shareholder until May 2014.[2][a] He was a prominent pioneer of the microcomputer revolution of the 1970s and 1980s.</a>
 </figure>
+<a id="tribute-link" href="https://en.wikipedia.org/wiki/Bill_Gates" target="_blank">Wikipedia Link</a>
 <section id="tribute-info">
-  <h3 ID="headline">Insert info here</h3>
+  <h3 ID="headline">Acomplishments</h3>
 
 
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+   <li> Co-chair of the Bill & Melinda Gates Foundation.<li>
+<li>Chairman and founder of Cascade Investment.</li>
+<li>Chairman and founder of Branded Entertainment Network.</li>
+<li>Chairman and co-founder of TerraPower.</li>
+<li> of Breakthrough Energy.</li>
+<li>Founder of Gates Ventures.</li>
+<li>Technology advisor of Microsoft.</li>
 
   </ul>
 
-  <blockquote cite="">
-    <p></p>
+  <blockquote cite="https://www.britannica.com/biography/Bill-Gates">
+    <p>Gates wrote his first software program at the age of 13. In high school he helped form a group of programmers who computerized their school’s payroll system and founded Traf-O-Data, a company that sold traffic-counting systems to local governments. In 1975 Gates, then a sophomore at Harvard University, joined his hometown friend Paul G. Allen to develop software for the first microcomputers. They began by adapting BASIC, a popular programming language used on large computers, for use on microcomputers. With the success of this project, Gates left Harvard during his junior year and, with Allen, formed Microsoft. Gates’s sway over the infant microcomputer industry greatly increased when Microsoft licensed an operating system called MS-DOS to International Business Machines Corporation—then the world’s biggest computer supplier and industry pacesetter—for use on its first microcomputer, the IBM PC (personal computer). After the machine’s release in 1981, IBM quickly set the technical standard for the PC industry, and MS-DOS likewise pushed out competing operating systems.</p>
 </blockquote>
 <cite></cite>
 <h3>Insert info here
