Add launch configuration and update styles for tribute page

--- a/src/tribute-page.html
+++ b/src/tribute-page.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <main id='main'>
-  <h1 id='title' class="title">A Tribute To <br>Bill Gates</h1>
+  <h1 id='title' class="title">A Tribute To Bill Gates</h1>
 <p class="h1">The Greatest to ever create it</p>
 <figure id='img-div'>
   <img class='img1' id='image' src="/img/billgates.jpg" alt="billgates">     
@@ -42,7 +42,7 @@
 </blockquote>
 <cite></cite>
 <h3>Insert info here
-<a id="tribute-link" href="https://en.wikipedia.org/wiki/Bill_Gates" target="_blank">Wikipedia entry</a>
+<a id="tribute-link" href="https://en.wikipedia.org/wiki/Bill_Gates" target="_blank">Link to Site</a>
 </h3>
 </section>
 </main>
