Update styles.css and tribute-page.html

--- a/src/tribute-page.html
+++ b/src/tribute-page.html
@@ -10,23 +10,33 @@
 <main id='main'>
   <h1 id='title' class="title">A Tribute To Bill Gates</h1>
 <p class="h1">The Greatest to ever create it</p>
-<figure id='img-div'>
+<figcaption id='img-caption'>
+  Co-Founder of Microsoft
+  </figcaption>
+  <figure id='img-div'>
   <img class='img1' id='image' src="/img/billgates.jpg" alt="billgates">     
   <a id='tribute-link' target='_blank'href='_blank' value='link'></a>
 </img>
-
-
-<figcaption id='img-caption'>
-  Co founder of Microsodt
-  </figcaption>
-<a id='tribute-info' class="p1">William Henry Gates III (born October 28, 1955) is an American businessman, investor, philanthropist, and writer best known for co-founding the software giant Microsoft, along with his childhood friend Paul Allen. During his career at Microsoft, Gates held the positions of chairman, chief executive officer (CEO), president, and chief software architect, while also being its largest individual shareholder until May 2014.[2][a] He was a prominent pioneer of the microcomputer revolution of the 1970s and 1980s.</a>
 </figure>
+<br>
+
+<div class="p1">
+  <h2 id='tribute-info'>Bill Gates</h2>
+  <p>William Henry Gates III (born October 28, 1955) is an American businessman, investor, philanthropist, and writer best known for co-founding the software giant Microsoft, along with his childhood friend Paul Allen. During his career at Microsoft, Gates held the positions of chairman, chief executive officer (CEO), president, and chief software architect, while also being its largest individual shareholder until May 2014.[2][a] He was a prominent pioneer of the microcomputer revolution of the 1970s and 1980s.</p>
+  <a id="tribute-link" href="https://en.wikipedia.org/wiki/Bill_Gates" target="_blank">Wikipedia Link</a>
+<a id='tribute-info' class="p1">William Henry Gates III (born October 28, 1955) is an American businessman, investor, philanthropist, and writer best known for co-founding the software giant Microsoft, along with his childhood friend Paul Allen. During his career at Microsoft, Gates held the positions of chairman, chief executive officer (CEO), president, and chief software architect, while also being its largest individual shareholder until May 2014.[2][a] He was a prominent pioneer of the microcomputer revolution of the 1970s and 1980s.</a>
+
 <a id="tribute-link" href="https://en.wikipedia.org/wiki/Bill_Gates" target="_blank">Wikipedia Link</a>
+</div>
+
+
+
 <section id="tribute-info">
-  <h3 ID="headline">Acomplishments</h3>
-
-
-  <ul>
+  <img class='img2' id='image' src="/img/img2.jpg" alt="billgates">
+</div>
+<div class="p2"
+  <h3 id="headline">Acomplishments</h3>
+<ul class="">
    <li> Co-chair of the Bill & Melinda Gates Foundation.<li>
 <li>Chairman and founder of Cascade Investment.</li>
 <li>Chairman and founder of Branded Entertainment Network.</li>
@@ -34,7 +44,8 @@
 <li> of Breakthrough Energy.</li>
 <li>Founder of Gates Ventures.</li>
 <li>Technology advisor of Microsoft.</li>
-
+<div>
+ 
   </ul>
 
   <blockquote cite="https://www.britannica.com/biography/Bill-Gates">
