Add styling for image caption and update tribute page content

--- a/src/tribute-page.html
+++ b/src/tribute-page.html
@@ -21,10 +21,13 @@
 <br>
 
 <div class="p1">
-  <h2 id='tribute-info'>Bill Gates</h2>
-  <p>William Henry Gates III (born October 28, 1955) is an American businessman, investor, philanthropist, and writer best known for co-founding the software giant Microsoft, along with his childhood friend Paul Allen. During his career at Microsoft, Gates held the positions of chairman, chief executive officer (CEO), president, and chief software architect, while also being its largest individual shareholder until May 2014.[2][a] He was a prominent pioneer of the microcomputer revolution of the 1970s and 1980s.</p>
-  <a id="tribute-link" href="https://en.wikipedia.org/wiki/Bill_Gates" target="_blank">Wikipedia Link</a>
+  
+  <article>William Henry Gates III (born October 28, 1955) is an American businessman, investor, philanthropist, and writer best known for co-founding the software giant Microsoft, along with his childhood friend Paul Allen. During his career at Microsoft, Gates held the positions of chairman, chief executive officer (CEO), president, and chief software architect, while also being its largest individual shareholder until May 2014.[2][a] He was a prominent pioneer of the microcomputer revolution of the 1970s and 1980s.
+  <br>
+    <a id="tribute-link" href="https://en.wikipedia.org/wiki/Bill_Gates" target="_blank">Wikipedia Link</a>
 
+  
+  <p>Bill Gates was born and raised in Seattle, Washington. In 1975, he and Paul Allen launched Microsoft, which became the world's largest PC software company. Gates led the company as chairman and CEO until stepping down as CEO in January 2000, but he remained chairman and became chief software architect. During the late 1990s, Gates had been criticized for his business tactics, which have been considered anti-competitive. This opinion has been upheld by numerous court rulings. In June 2006, Gates announced that he would be transitioning to a part-time role at Microsoft and full-time work at the Bill & Melinda Gates Foundation, the private charitable foundation that he and his then-wife, Melinda Gates, established in 2000. He gradually transferred his duties to Ray Ozzie and Craig Mundie. He stepped down as chairman of Microsoft in February 2014 and assumed a new post as technology adviser to support the newly appointed CEO Satya Nadella.</p>
 
 
 
@@ -35,7 +38,7 @@
 <div class="p2"
   <h3 id="headline">Acomplishments</h3>
 <ul class="">
-   <li> Co-chair of the Bill & Melinda Gates Foundation.<li>
+<li> Co-chair of the Bill & Melinda Gates Foundation.<li>
 <li>Chairman and founder of Cascade Investment.</li>
 <li>Chairman and founder of Branded Entertainment Network.</li>
 <li>Chairman and co-founder of TerraPower.</li>
