Add styles for headline and ul elements

--- a/src/tribute-page.html
+++ b/src/tribute-page.html
@@ -35,24 +35,36 @@
 <section id="tribute-info">
   <img class='img2' id='image' src="/img/img2.jpg" alt="billgates">
 </div>
-<div class="p2"
+<div id="ul">
   <h3 id="headline">Acomplishments</h3>
-<ul class="">
-<li> Co-chair of the Bill & Melinda Gates Foundation.<li>
+<ul>
+<li> Co-chair of the Bill & Melinda Gates Foundation.</li>
 <li>Chairman and founder of Cascade Investment.</li>
 <li>Chairman and founder of Branded Entertainment Network.</li>
 <li>Chairman and co-founder of TerraPower.</li>
 <li> of Breakthrough Energy.</li>
 <li>Founder of Gates Ventures.</li>
 <li>Technology advisor of Microsoft.</li>
-<div>
- 
-  </ul>
+ </ul>
+ <h3>Business ventures and investments (partial list)</h3>
+<ul>
+  <li>Microsoft(MSFT)</li>
+  <li>Berkshire(BRK.B)</li>
+  <li>Canadian National Railway (CNI)</li>
+  <li>Waste Management (WM)</li>
+  <li>Caterpillar Inc. (CAT)</li>
+  <li>Deere & Company (DE)</li>
+  <li>Ecolab (ECL)</li>
+  <li>Coca-Cola FEMSA, S.A.B. de C.V. (KOF)</li>
+  <li>Walmart (WMT)</li>
+  <li>FedEx Corp. (FDX)</li>
+  <li>Waste Connections (WCN)</li>
 
-  <blockquote cite="https://www.britannica.com/biography/Bill-Gates">
-    <p>Gates wrote his first software program at the age of 13. In high school he helped form a group of programmers who computerized their school’s payroll system and founded Traf-O-Data, a company that sold traffic-counting systems to local governments. In 1975 Gates, then a sophomore at Harvard University, joined his hometown friend Paul G. Allen to develop software for the first microcomputers. They began by adapting BASIC, a popular programming language used on large computers, for use on microcomputers. With the success of this project, Gates left Harvard during his junior year and, with Allen, formed Microsoft. Gates’s sway over the infant microcomputer industry greatly increased when Microsoft licensed an operating system called MS-DOS to International Business Machines Corporation—then the world’s biggest computer supplier and industry pacesetter—for use on its first microcomputer, the IBM PC (personal computer). After the machine’s release in 1981, IBM quickly set the technical standard for the PC industry, and MS-DOS likewise pushed out competing operating systems.</p>
-</blockquote>
-<cite></cite>
+</ul>
+</div>
+  <article>
+    Gates wrote his first software program at the age of 13. In high school he helped form a group of programmers who computerized their school’s payroll system and founded Traf-O-Data, a company that sold traffic-counting systems to local governments. In 1975 Gates, then a sophomore at Harvard University, joined his hometown friend Paul G. Allen to develop software for the first microcomputers. They began by adapting BASIC, a popular programming language used on large computers, for use on microcomputers. With the success of this project, Gates left Harvard during his junior year and, with Allen, formed Microsoft. Gates’s sway over the infant microcomputer industry greatly increased when Microsoft licensed an operating system called MS-DOS to International Business Machines Corporation—then the world’s biggest computer supplier and industry pacesetter—for use on its first microcomputer, the IBM PC (personal computer). After the machine’s release in 1981, IBM quickly set the technical standard for the PC industry, and MS-DOS likewise pushed out competing operating systems.</article>
+
 <h3>Insert info here
 <a id="tribute-link" href="https://en.wikipedia.org/wiki/Bill_Gates" target="_blank">Link to Site</a>
 </h3>
