--- a/src/tribute-page.html
+++ b/src/tribute-page.html
@@ -19,24 +19,13 @@
 </img>
 </figure>
 <br>
-
-<div class="p1">
-  
-  <article>William Henry Gates III (born October 28, 1955) is an American businessman, investor, philanthropist, and writer best known for co-founding the software giant Microsoft, along with his childhood friend Paul Allen. During his career at Microsoft, Gates held the positions of chairman, chief executive officer (CEO), president, and chief software architect, while also being its largest individual shareholder until May 2014.[2][a] He was a prominent pioneer of the microcomputer revolution of the 1970s and 1980s.
+<article class="a1">William Henry Gates III (born October 28, 1955) is an American businessman, investor, philanthropist, and writer best known for co-founding the software giant Microsoft, along with his childhood friend Paul Allen. During his career at Microsoft, Gates held the positions of chairman, chief executive officer (CEO), president, and chief software architect, while also being its largest individual shareholder until May 2014.[2][a] He was a prominent pioneer of the microcomputer revolution of the 1970s and 1980s.</article>
   <br>
-    <a id="tribute-link" href="https://en.wikipedia.org/wiki/Bill_Gates" target="_blank">Wikipedia Link</a>
-
-  
-  <p>Bill Gates was born and raised in Seattle, Washington. In 1975, he and Paul Allen launched Microsoft, which became the world's largest PC software company. Gates led the company as chairman and CEO until stepping down as CEO in January 2000, but he remained chairman and became chief software architect. During the late 1990s, Gates had been criticized for his business tactics, which have been considered anti-competitive. This opinion has been upheld by numerous court rulings. In June 2006, Gates announced that he would be transitioning to a part-time role at Microsoft and full-time work at the Bill & Melinda Gates Foundation, the private charitable foundation that he and his then-wife, Melinda Gates, established in 2000. He gradually transferred his duties to Ray Ozzie and Craig Mundie. He stepped down as chairman of Microsoft in February 2014 and assumed a new post as technology adviser to support the newly appointed CEO Satya Nadella.</p>
-
-
-
-
-<section id="tribute-info">
-  <img class='img2' id='image' src="/img/img2.jpg" alt="billgates">
-</div>
-<div id="ul">
-  <h3 id="headline">Acomplishments</h3>
+<article class="a1">Bill Gates was born and raised in Seattle, Washington. In 1975, he and Paul Allen launched Microsoft, which became the world's largest PC software company. Gates led the company as chairman and CEO until stepping down as CEO in January 2000, but he remained chairman and became chief software architect. During the late 1990s, Gates had been criticized for his business tactics, which have been considered anti-competitive. This opinion has been upheld by numerous court rulings. In June 2006, Gates announced that he would be transitioning to a part-time role at Microsoft and full-time work at the Bill & Melinda Gates Foundation, the private charitable foundation that he and his then-wife, Melinda Gates, established in 2000. He gradually transferred his duties to Ray Ozzie and Craig Mundie. He stepped down as chairman of Microsoft in February 2014 and assumed a new post as technology adviser to support the newly appointed CEO Satya Nadella.</article>
+  <br>
+  <div class="parent">
+    <div class="child">
+  <h3 class="headline">Acomplishments</h3>
 <ul>
 <li> Co-chair of the Bill & Melinda Gates Foundation.</li>
 <li>Chairman and founder of Cascade Investment.</li>
@@ -46,8 +35,11 @@
 <li>Founder of Gates Ventures.</li>
 <li>Technology advisor of Microsoft.</li>
  </ul>
- <h3>Business ventures and investments (partial list)</h3>
-<ul>
+    </div>
+    <div class="child2">
+ <h3 class="headline">Business ventures and investments (partial list)</h3>
+ 
+ <ul>
   <li>Microsoft(MSFT)</li>
   <li>Berkshire(BRK.B)</li>
   <li>Canadian National Railway (CNI)</li>
@@ -59,16 +51,21 @@
   <li>Walmart (WMT)</li>
   <li>FedEx Corp. (FDX)</li>
   <li>Waste Connections (WCN)</li>
-
 </ul>
-</div>
-  <article>
+    </div>
+  
+  </div>
+  
+
+  <article class="art1">
     Gates wrote his first software program at the age of 13. In high school he helped form a group of programmers who computerized their school’s payroll system and founded Traf-O-Data, a company that sold traffic-counting systems to local governments. In 1975 Gates, then a sophomore at Harvard University, joined his hometown friend Paul G. Allen to develop software for the first microcomputers. They began by adapting BASIC, a popular programming language used on large computers, for use on microcomputers. With the success of this project, Gates left Harvard during his junior year and, with Allen, formed Microsoft. Gates’s sway over the infant microcomputer industry greatly increased when Microsoft licensed an operating system called MS-DOS to International Business Machines Corporation—then the world’s biggest computer supplier and industry pacesetter—for use on its first microcomputer, the IBM PC (personal computer). After the machine’s release in 1981, IBM quickly set the technical standard for the PC industry, and MS-DOS likewise pushed out competing operating systems.</article>
 
 <h3>Insert info here
 <a id="tribute-link" href="https://en.wikipedia.org/wiki/Bill_Gates" target="_blank">Link to Site</a>
 </h3>
 </section>
+<a id="tribute-link" class="a2" href="https://en.wikipedia.org/wiki/Bill_Gates" target="_blank">Wikipedia Link</a>
+
 </main>
 </body>
 </html>
